--- a/package.json
+++ b/package.json
@@ -15,8 +15,21 @@
   "author": "Kenneth Baylosis <kbaylosis@zoogtech.com>",
   "license": "MIT",
   "dependencies": {
-    "json-stringify-safe": "^5.0.1",
+    "json-stringify-safe": "^5.0.1"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {
     "mocha": "^3.4.2",
     "must": "^0.13.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kbaylosis/json-circular-stringify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kbaylosis/json-circular-stringify/issues"
+  },
+  "homepage": "https://github.com/kbaylosis/json-circular-stringify#readme"
 }
